# Hydravisor

./: CONTRIBUTING.md  Cargo.toml  PROJECT.md  README.md  TECHNICAL_DESIGN.md
src/: api.rs  audit_engine.rs  bedrock_manager.rs  cli.rs  config.rs  env_manager.rs  errors.rs  libvirt_manager.rs  logging.rs  main.rs  mcp.rs  ollama_manager.rs  policy.rs  session_manager.rs  ssh_manager.rs  tui.rs
src/tui/: app.rs  events.rs  mod.rs  theme.rs  tracing_layer.rs  ui.rs
src/tui/view_mode/: list.rs
src/tui/widgets/: about_modal.rs  bedrock_model_list.rs  chat.rs  input_bar.rs  keybindings_modal.rs  logs.rs  menu.rs  mod.rs  new_vm_popup.rs  ollama_model_list.rs  status_bar.rs  vm_list.rs
technical_design/: agent-flow.design.md  architecture-overview.md  cli.design.md  config.toml.md  interface.design.md  logging_audit.md  mcp.design.md  policy-cli-tools.md  policy.schema.json  policy.toml  policy.toml.md  security.md  ssh.design.md  ssh.schema.json  ssh.toml  tui.design.md
